# oxlide

./: .gitignore  Cargo.toml  congftv7ngujnsdt0c9kba1nludifutr  manifest  rvtdn8srrnith8rsiffksfdbdvi9ql4i.darc  vok5scdemgjkiqr8gjsq8ghgoahl7uji
.claude/: settings.json
src/: cli.rs  lib.rs  main.rs  present.rs  wake.rs
src/layout/: engine.rs  mod.rs
src/parser/: ast.rs  fold.rs  mod.rs  prepass.rs
src/parser/fixtures/: adjacent-text-coalesced.md  all-visible-tab-indent.md  autolink.md  cell-break-single-blank.md  code-with-blank-lines-inside.md  code-with-metadata-suffix.md  directive-empty-args.md  directive-multiple.md  directive-on-cell.md  directive-on-slide.md  directive-whitespace-tolerance.md  directive-with-hyphens.md  edge-mixed-leading-whitespace.md  hard-break.md  ia-image-invalid-opacity-errors.md  ia-image-kebab-case-size.md  ia-image-non-image-extension-falls-through.md  ia-image-quoted-values.md  ia-image-unknown-key-ignored.md  ia-image-with-all-keys.md  image-in-heading.md  image-with-surrounding-whitespace-stays-paragraph.md  image-with-title-ignored.md  indented-block-errors.md  inline-bold.md  inline-code.md  inline-image.md  inline-italic.md  inline-link.md  internal-sentinel-not-leaked.md  leading-trailing-rule.md  link-with-code-text.md  list-mixed-indent.md  list-tab-indent.md  mixed-notes-and-visible.md  multi-slide-double-blank.md  multi-slide-rule.md  multiple-images-inline.md  nested-bold-italic.md  (+8 more)
src/render/: composition.rs  engine.rs  mod.rs  text.rs  theme.rs
tests/: fixtures_parse.rs  present_errors.rs  render_fixtures.rs
(+15 files in other folders)
