[package]
name = "oxlide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
keepawake = "0.6.0"
pulldown-cmark = { version = "0.13", default-features = false }
qrcode = { version = "0.14", default-features = false }
ratatui = "0.30"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-qrcode = "0.2"
unicode-width = "0.2"
